--- a/app.json
+++ b/app.json
@@ -7,6 +7,9 @@
     },
     {
       "url": "https://github.com/heroku/heroku-buildpack-apt"
-     }
+     },
+    {
+      "url": "https://github.com/stefangomez/heroku-buildpack-openssl.git"
+      }
     ]
 }
