--- a/app.json
+++ b/app.json
@@ -10,6 +10,9 @@
      },
     {
       "url": "heroku/php"
+      },
+    {
+      "url": "https://github.com/soutys/heroku-buildpack-openssl.git"
       }
     ]
 }
